# epinet

./: .gitignore  EPINET_plusX_9conv22_save.py  EPINET_test.ipynb  EPINET_test.py  EPINET_train.py  README.md  demo.py  main.py  pyproject.toml
docs/: Prezentare_EPINET_Boscan_Tiberiu-Ion.odp  Raport_EPINET_Boscan_Tiberiu-Ioan.odt
epinet_checkpoints/: lf_EPINET_train.txt
epinet_fun/: func_epinetmodel.py  func_generate_traindata.py  func_makeinput.py  func_pfm.py  func_savedata.py  rotation_augmentation.py  util.py
epinet_output/: 2067.pfm  bicycle.pfm  cotton.pfm  origami.pfm
models/: lf_EPINET_train.txt
results/: cotton.pfm  dino.pfm
utils/: func_epinetmodel.py  func_generate_traindata.py  func_makeinput.py  func_pfm.py  func_savedata.py  util.py
