[project]
name = "epinet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.2",
    "ipykernel>=7.1.0",
    "keras>=3.13.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "tensorflow[and-cuda]>=2.20.0",
]
